2007-04-26  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-save.c: disabled the layer offsets saving
	code. This can be re-enabled in 2.6, when the load plug-in is
	patched to support these saved offsets.

	* plug-ins/common/tiff-load.c: marked the code for the above
	with a TODO comment.

2007-04-26  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-save.c: save the layer offsets too, to
	fix bug #419578.

2007-04-26  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/gfig/gfig-dobject.c: properly parse files with CRLF
	line-endings which were created in the past in Windows. Fixes
	a part of bug #346988.

	* plug-ins/gfig/gfig.c: open files in binary mode so that the same
	line-endings are used on all platforms.

2007-04-25  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrush.c (gimp_brush_scale_size): removed bogus
	"return" from void function. Fixes bug #433339, patch from Eric
	Lamarque.

2007-04-25  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c: set a different filename when
	the number of pages loaded is lower than the number of pages
	in the TIFF file.

2007-04-25  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c: set the filename to the original
	filename in case of single-page loads.

2007-04-25  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c: moved the non-interactive check out
	of load_dialog() and into run().

2007-04-25  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpparamspecs.c (gimp_param_string_validate): added
	#warning to use GParamSpecString's features once we depend on a
	fixed version.

2007-04-25  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpparamspecs.[ch] (struct GimpParamSpecString)
	(gimp_param_spec_string): added "gboolean non_empty" to require
	the string being non-empty. Changed validation accordingly.
	Also fixed validation for static strings (we were happily
	freeing and modifying them before).
